fixed deprecation warnings